test.out
nohup: ignoring input
srun: job 1542384 queued and waiting for resources
srun: job 1542384 has been allocated resources
  File "main.py", line 25
    raise NotImplementedError(f"{args.dataset} is not supported")
                                              srun: error: BJ-IDC1-10-10-30-223: task 0: Exited with exit code 1
                 ^
SyntaxError: invalid syntax
